--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "audio-book-ai-v01": "file:",
+    "axios": "^1.7.7",
     "express": "^4.21.1",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
