--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "audio-book-ai-v01": "file:",
     "axios": "^1.7.9",
     "express": "^4.21.2",
+    "http-proxy-middleware": "^3.0.3",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
